fix a bug with prepare+oids